--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ Flask==1.1.1
 Jinja2==2.10.3
 IPython==7.12.0
 google-api-python-client==1.12.8
+numpy==1.19.4
+pandas==1.1.5
+python-dateutil==2.8.1
+
 
